# bee-vs-wasp

./: .dvcignore  .gitignore  README.md  commands.py  data.dvc  pyproject.toml
.dvc/: config
bee_vs_wasp/: data.py  infer.py  model.py  module.py  preprocessing.py  train.py
conf/: config.yaml  infer_config.yaml
conf/data/: datamodule.yaml
conf/model/: resnet.yaml  simple_cnn.yaml
conf/train/: trainer.yaml
